--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,12 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+dependencies:
 
 dependencies:
   flutter:
     sdk: flutter
-  google_fonts: ^6.1.0 # or the latest version
+  google_fonts: ^6.1.0  # or the latest version
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -56,6 +57,11 @@ flutter:
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
+  dependencies:
+  flutter:
+    sdk: flutter
+  google_fonts: ^6.1.0 # or the latest version
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
